<resources>
    <string name="app_name">BullsCows</string>

    <string name="banner_ad_unit_id">ca-app-pub-6916191358710501/2519266070</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="go">GO!</string>
    <string name="add_offer_dialog_label">Add offer</string>
    <string name="ok">Ok</string>
    <string name="offers_list_submessage_empty">To start the game offer your first version</string>
    <string name="offers_list_submessage_begin_game">The clock is ticking!</string>
    <string name="offers_made">Offers made:</string>
    <string name="time_spend">Time spent:</string>
    <string name="seconds">sec</string>
    <string name="gold_earned">Gold earned:</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_lose">You lose!</string>
    <string name="try_count">try</string>
    <string name="time_is_over">Time is over</string>
    <string name="quality_reward">quality reward</string>
    <string name="quality_mulct">quality mulct</string>
    <string name="quality_end_game">too much mistakes</string>
    <string name="time_game_reward">game time reward</string>
    <string name="time_game_mulct">game time mulct</string>
    <string name="time_game_end_game">too long</string>
    <string name="unrewarded">unrewarded</string>
    <string name="check_quality">check quality</string>
    <string name="note_the_time">note the time</string>
    <string name="with_mulct">with mulct</string>
    <string name="can_lose">can lose</string>
    <string name="note_the_time_offer">note time one offer</string>
    <string name="check_count_offers">check count offers</string>
    <string name="much">much</string>
    <string name="time_offer_reward">offer time reward</string>
    <string name="time_offer_mulct">offer time mulct</string>
    <string name="count_reward">offers count reward</string>
    <string name="count_mulct">offers count mulct</string>
    <string name="count_end_game">too much offers</string>

    <string name="for_coins">Buy next level for
        <![CDATA[
        <font color=\'#FFC107\'>%s</font>
        ]]>
        coins</string>
    <string name="current_level">Current level:</string>
    <string name="level_name_bronze">bronze</string>
    <string name="level_name_zero">zero</string>
    <string name="level_name_silver">silver</string>
    <string name="level_name_diamond">diamond</string>
    <string name="level_name_master">master</string>
    <string name="level_name_godlike">godlike</string>
    <string name="need_more_gold">Need more gold</string>
    <string name="level_up">Level up!</string>
    <string name="your_level_now">Your level now:</string>
    <string name="good_luck">Good luck.</string>
    <string name="godlike_level_up_description">You godlike. Enjoy the victory.</string>
    <string name="bronze_level_up_description">Now you can change count elements of combination. Good luck.</string>
    <string name="silver_level_up_description">Good luck.</string>
    <string name="diamond_level_up_description">Now you can choose hard difficult. Good luck.</string>
    <string name="master_level_up_description">You open all existing features. But you still do not godlike. Good luck.</string>
    <!--<string name="info">Information</string>-->
    <string name="count_elements">Count elements of combination:
        <![CDATA[<big>
        <font color=\'#9C27B0\'>%s</font>
        </big>]]></string>
    <string name="combination_element_can_be">Combination element can be\nfrom
        <![CDATA[<big>
        <font color=\'#9C27B0\'>0</font>
        </big>]]>
     to
        <![CDATA[<big>
        <font color=\'#9C27B0\'>%s</font>
        </big>]]></string>
    <string name="rate">Rate this game</string>
    <string name="share_progress">Share your progress</string>
    <!--<string name="help">Get help</string>-->
    <string name="kill_progress">Kill your progress</string>
    <string name="help_url">https://kepocnhh.github.io/</string>
    <string name="show_game_difficults_title">Change difficults your game.</string>
    <string name="show_game_difficults_submessage">For your game you can change count from slider and range numbers from difficult selector. Try it.</string>
    <string name="show_game_settings_title">See your game settings and features.</string>
    <string name="show_game_settings_submessage">You can see there settings for time game and only for one offer. Also will be considered count offers and their quality. Can you get mulct and lose game.</string>
    <string name="done">Done</string>
    <string name="show_menu_title">Open menu if you need help.</string>
    <string name="show_menu_submessage">Inside menu you can see your game progress. Earned gold. Achieved level. Also you can get help and kill you progress.</string>
    <string name="show_new_game_title">Tap \"GO!\" button for begin new game</string>
    <string name="show_new_game_submessage">After setting you game you will be able to compete.</string>
    <string name="show_add_offer_title">Use special keyboard to create new offer.</string>
    <string name="show_add_offer_submessage">Add numbers. If you doubt you can press to refresh offer. And when you will be ready safely click on \"OK\". You can try it now.</string>
    <string name="show_in_game_submessage1">Pay attention. During the game you will be shown time one offer and their quality (if you make mistake). Also you can see bulls and cows counts.</string>
    <string name="show_in_game_submessage2">Here you can see time all game. How much time you have for one offer. And how many attempts you have left.</string>
    <string name="show_in_game_title1">Follow your progress.</string>
    <string name="show_in_game_title2">And follow for your game results.</string>
    <string name="show_greeting_title">Greeting!</string>
    <string name="show_greeting_submessage">Welcome to game. Here you can compete in the speed of thought. Earn gold. And brag to your friends.</string>
    <string name="to_rules">Rules</string>
    <string name="you_can_get_help">Also you can get more help.</string>
    <string name="read_rules_help_text">Read rules for more information about game features. Search for answers there.</string>
    <string name="share_text">I earned %1$s coins and reached the %2$s level in game %3$s\nTry it! You should like it.</string>
    <string name="danger">Danger!</string>
    <string name="kill_progress_description">All progress will be completely reset and the game will start again. Are you sure?</string>
    <string name="kill_progress_long_click_required">Make long click for real kill progress</string>
    <string name="rules_text">Rules text not exist for this language!</string>
</resources>