<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/danger"
        android:textColor="@color/red"
        android:textSize="16dp"/>
    <LinearLayout
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="288dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kill_progress_description"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/apply"
        android:text="@string/ok"
        android:textColor="@color/red"
        android:textAllCaps="true"
        android:layout_gravity="right"
        android:gravity="center"
        android:background="@drawable/red_ripple"
        android:layout_width="96dp"
        android:layout_height="48dp"/>
</LinearLayout>