<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/white"
             android:padding="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <ImageView
                android:id="@+id/menu"
                android:background="@drawable/primary_ripple"
                android:clickable="true"
                android:src="@drawable/ic_menu_white_24dp"
                android:tint="@color/colorPrimary"
                android:scaleType="center"
                android:layout_width="48dp"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <LinearLayout
            android:layout_marginLeft="32dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/show_menu_title"
                android:textSize="24dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/greydark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/show_menu_submessage"
                android:textSize="18dp"
                android:textColor="@color/greydark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="right"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/show_new_game_title"
                android:textSize="24dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/greydark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/show_new_game_submessage"
                android:textSize="18dp"
                android:textColor="@color/greydark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <Button
                android:id="@+id/go"
                android:layout_gravity="center_vertical|right"
                android:text="@string/go"
                android:background="@drawable/primary_fab"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="18dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:layout_width="56dp"
                android:layout_height="56dp"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>