<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="288dp"
              android:layout_height="48dp"
              android:paddingLeft="2dp">
    <FrameLayout
        android:id="@+id/easy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/easy_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/easy"
            android:textAllCaps="true"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/medium"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/medium"
            android:textAllCaps="true"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/hard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/hard_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hard"
            android:textAllCaps="true"/>
    </FrameLayout>
</LinearLayout>