<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@color/greydark"
             android:layout_width="match_parent"
             android:layout_height="88dp">
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:id="@+id/easy_lable"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="56dp">
        <TextView
            android:text="@string/easy"
            android:textColor="@color/green"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/unrewarded"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/check_quality"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_check_white_24dp"
                    android:tint="@color/green"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>
                <TextView
                    android:text="@string/check_quality"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/note_the_time"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:src="@drawable/ic_timer_white_36dp"
                    android:tint="@color/green"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>
                <TextView
                    android:text="@string/note_the_time"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/with_mulct"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/ic_error_white_24dp"
                    android:tint="@color/red"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:text="@string/with_mulct"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/note_the_time_offer"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_access_time_white_24dp"
                    android:tint="@color/green"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>
                <TextView
                    android:text="@string/note_the_time_offer"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/check_count_offers"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_menu_white_24dp"
                    android:tint="@color/green"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>
                <TextView
                    android:text="@string/check_count_offers"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/can_lose"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:src="@drawable/ic_scull36"
                    android:tint="@color/red"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>
                <TextView
                    android:text="@string/can_lose"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/go"
            android:text="@string/go"
            android:background="@drawable/primary_fab"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"
            android:layout_width="56dp"
            android:layout_height="56dp"/>
    </LinearLayout>
</FrameLayout>