<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/level_up"
        android:textColor="@color/purple"
        android:textSize="16dp"/>
    <LinearLayout
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="288dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textColor="@color/black"
            android:textSize="16dp"/>
        <LinearLayout
            android:layout_marginLeft="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/your_level_now"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/level_name"
                android:text="godlike"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stars"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_star_white_48dp"
                android:tint="@color/gold"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageView
                android:id="@+id/star2"
                android:src="@drawable/ic_star_border_white_48dp"
                android:tint="@color/gold"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageView
                android:id="@+id/star3"
                android:src="@drawable/ic_star_border_white_48dp"
                android:tint="@color/gold"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageView
                android:id="@+id/star4"
                android:src="@drawable/ic_star_border_white_48dp"
                android:tint="@color/gold"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageView
                android:id="@+id/star5"
                android:src="@drawable/ic_star_border_white_48dp"
                android:tint="@color/gold"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bronze_level_up_description"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/level_up_ok"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:layout_gravity="right"
        android:gravity="center"
        android:background="@drawable/primary_ripple"
        android:layout_width="96dp"
        android:layout_height="48dp"/>
</LinearLayout>