<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@color/greydark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:background="@drawable/shadow_white_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/game_count_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:text="@string/count_elements"
                        android:textColor="@color/black_trans"
                        android:textSize="14dp"/>
                    <FrameLayout
                        android:id="@+id/game_count_frame"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">
                        <SeekBar
                            android:id="@+id/game_count_seek"
                            android:layout_gravity="center_vertical"
                            android:theme="@style/CountSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </FrameLayout>
                    <stan.bulls.cows.ui.views.selectors.DifficultPrimarySelector
                        android:id="@+id/difficult"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"/>
                    <TextView
                        android:id="@+id/game_max_amount_text"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:gravity="center"
                        android:text="@string/combination_element_can_be"
                        android:textColor="@color/black_trans"
                        android:textSize="14dp"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_margin="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/show_game_difficults_title"
                    android:textSize="24dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/show_game_difficults_submessage"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>